@@ -1,3 +1,4 @@
+Implement an exponential NAK backoff.
 Clear the signal_pipe fd from the fdset when all signals have
 been read.
 Don't release a link local address.
